# meshy2aurora

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  assert-canonical-workspace.ps1  rust-toolchain.toml
crates/m2a-core/: Cargo.toml
crates/m2a-core/examples/: inspect_module.rs  materialize_m6.rs
crates/m2a-core/src/: erf.rs  gff.rs  hak.rs  lib.rs  m7_corpus.rs  model_pipeline.rs  owned_fixture.rs  package.rs  profile_a.rs  proof_module.rs  reference_proof.rs  tga.rs  two_da.rs
crates/m2a-core/src/glb/: mod.rs
crates/m2a-core/src/mdl/: binary_reader.rs  errors.rs  mod.rs  parse_binary_mdl.rs  semantic_readback.rs  types.rs  write_binary_mdl.rs  writer_types.rs
crates/m2a-core/tests/: embedded_image_decode.rs  erf.rs  erf_reference_integration.rs  gff.rs  glb.rs  hak_writer.rs  m7_corpus.rs  mdl.rs  mdl_writer.rs  model_pipeline.rs  package_manifest.rs  profile_a.rs  reference_proof.rs  tga_writer.rs  toolset_module_reference.rs  two_da.rs
crates/m2a-core/tests/fixtures/: build_minimal_binary_mdl.rs  build_synthetic_glb.rs
crates/m2a-core/tests/mdl/: parser.rs
crates/m2a-wasm/: Cargo.toml
crates/m2a-wasm/src/: lib.rs
crates/m2a-wasm/tests/: node_boundary.cjs
documentation/: AGENTS.md  AUDYT_APLIKACJI_2026-07-15.md  AUDYT_MOCKOW_MESHY_LAB_2026-07-16.md  AUDYT_PROJEKTU_2026-07-15.md  AUDYT_PROJEKTU_2026-07-16.md  AUDYT_WATKOW_CODEX_2026-07-15.md  AUDYT_ZGODNOSCI_DONE_I_WORKSPACE_2026-07-16.md  CANONICAL_WORKSPACE.md  CLOUD_SUPPLEMENT_FORMAT.md  PROJECT_RULES.md  README.md  animacje-kontrakt-profil-a-codex.md  (+89 more)
(+114 files in other folders)
