[package]
name = "m2a-wasm"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
m2a-core = { path = "../m2a-core" }
serde.workspace = true
serde_json = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
sha2.workspace = true
wasm-bindgen-test = "0.3"

[lints]
workspace = true
